<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2013 Yoshihiro Miyama

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">TAG Notepad</string>

    <string name="description_tag_list">Tag list</string>
    <string name="description_add_note">Add Note</string>
    <string name="description_add_tag">Add Tag</string>
    <string name="description_append_tag">TAG</string>
    <string name="description_tag">TAG</string>
    <string name="description_input_tagname">Type new Tag name</string>
    <string name="description_edit_tagname">Rename Tag name</string>
    <string name="description_appended_notes">\'s Note</string>
    <string name="description_open_note">Open</string>
    <string name="description_edit">Edit</string>
    <string name="description_delete">Delete</string>
    <string name="description_allnotes_list">All Notes</string>
    <string name="description_search">Search</string>
    <string name="description_sort">Sort</string>
    <string name="description_preference">Settings</string>
    <string name="description_save">Save</string>
    <string name="description_share">Share</string>
    <string name="description_char_count">Total Char Count:</string>
    <string name="description_about">About</string>

    <string name="description_note_title"> title</string>
    <string name="description_note_body"> body</string>

    <string name="description_backup_success">Backup Completed</string>
    <string name="description_delete_backup_success">Delete backup file completed</string>
    <string name="description_restore_success">Restore Completed</string>
    <string name="description_backup_notfound">No Backup data Found</string>
    <string name="description_backup_error">Error During Operation: </string>
    <string name="description_add">add</string>
    <string name="description_unnamed_tag">unnamed tag</string>
    <string name="description_untitled_note">untitled note</string>
    <string name="description_mail_subject">[request and bug:TAG Notepad] </string>
    <string name="description_mailto">mailto:kyakujin.app@gmail.com</string>

    <string name="title_apend_tag">Append Tag</string>
    <string name="title_backup">Backup</string>
        <string name="title_delete_backup">Delete backup file</string>
    <string name="title_restore">Restore</string>
    <string name="alert_message_backup">Do you want to backup your current data?\n\n
        (The backup data saved in the past will be overwritten.)</string>
    <string name="alert_message_delete_backup">Do you want to delete the backup data?</string>
    <string name="alert_message_restore">Do you want to restore the backup data?\n\n
        (The current data will be overwritten. )</string>

    <string name="title_tag">Tag list</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search Notes</string>
    <string name="alert_title_delete">Notice: Delete</string>
    <string name="alert_message_delete_note">Do you want to delete this Note?</string>
    <string name="alert_message_delete_tag">Do you want to delete this Tag?</string>
    <string name="alert_title_sort">Sort</string>
    <string name="alert_title_about">About</string>

    <string name="category_settings">Settings</string>
    <string name="category_backup_restore">Backup and Restore</string>

    <string name="list_fontsize_title">Font size</string>
    <string name="list_fontsize_summary">""</string>
    <string name="list_pref_fontsize">Font size</string>
    <string-array name="list_fontsize_entries">
        <item>X-large</item>
        <item>Large</item>
        <item>Medium</item>
        <item>Small</item>
        <item>X-small</item>
    </string-array>
    <string-array name="list_fontsize_entryvalues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="list_charcounter_title">Show character count</string>
    <string name="list_charcounter_summary">""</string>
    <string name="list_pref_charcounter">Character count</string>
    <string-array name="list_charcounter_entries">
        <item>Show(Exclude line break)</item>
        <item>Show(Contain line break)</item>
        <item>Hide</item>
    </string-array>
    <string-array name="list_charcounter_entryvalues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="list_sort_title">Order of listing Notes</string>
    <string name="list_sort_summary">""</string>
    <string name="list_pref_sort">Sort by</string>
    <string-array name="list_sort_entries">
        <item>Alphabetical(Descending)</item>
        <item>Alphabetical(Ascending)</item>
        <item>Modification time(Oldest to newest)</item>
        <item>Modification time(Newest to oldest)</item>
    </string-array>
    <string-array name="list_sort_entryvalues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="about_body"><![CDATA[
        <b>TAG Notepad</b><br>
        Version %s<br>
        <br>
        Thank you for downloading TAG Notepad.<br>
        <br>
        This software is licensed under the Apache License Version 2.0.
        The author has no responsibility for any damages, which may be caused by use of, or inability to use, this software.
        Use it at your own risk.<br>
        <br>
        Please send feature requests and bug reports via email to:
    ]]></string>
    <string name="mailto">kyakujin.app@gmail.com</string>

</resources>